--- a/backend/auth_service/pyproject.toml
+++ b/backend/auth_service/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "cryptography>=45.0.5",
     "fastapi>=0.116.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
