--- a/backend/auth_service/pyproject.toml
+++ b/backend/auth_service/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "fastapi>=0.116.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "redis>=6.2.0",
     "uvicorn>=0.35.0",
 ]
