feat: add depends condition to auth service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,8 @@ services:
     expose:
       - "${UVICORN__PORT}"
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
 
   redis:
     extends:
