--- a/backend/auth_service/pyproject.toml
+++ b/backend/auth_service/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "cryptography>=45.0.5",
     "fastapi>=0.116.1",
+    "orjson>=3.11.1",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "redis>=6.2.0",
