--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/nginx/conf.d:/etc/nginx/conf.d:ro
     depends_on:
-      - auth_service
+      auth_service:
+        condition: service_healthy
     ports:
       - "${APP__PORT}:80"
 
