--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - ./.env
     expose:
       - "${UVICORN__PORT}"
+    volumes:
+      - sessions:/app/media/session
     depends_on:
       redis:
         condition: service_healthy
@@ -45,3 +47,4 @@ services:
 
 volumes:
   redis-storage:
+  sessions:
